# Decidra

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  LICENSE  MANIFEST.in  Makefile  PACKAGING.md  README.md  cli.py  pyproject.toml  requirements.txt  verify_package.py
config/: config_template.ini
decidra/: __init__.py  monitor_app.py  post_install.py
decidra/api/: futu.py  futu_client.py  futu_factory.py  futu_quote.py  futu_trade.py
decidra/base/: __init__.py  ai.py  data.py  futu_modue.py  futu_module.py  order.py  trading.py
decidra/modules/: __init__.py  futu_market.py  futu_trade.py  jsonlite_data.py  notification.py  storage.py  supabase.py  yahoo_data.py  yahoo_stock.py
decidra/modules/ai/: __init__.py  claude_ai_client.py
decidra/modules/analyzer/: __init__.py  analyzer_market.py  analyzer_result.py  analyzer_stock.py  config.py  search_service.py
decidra/modules/fetcher/: __init__.py  akshare.py  baostock.py  yfinance.py
decidra/monitor/: __init__.py  app_core.py  monitor_layout.py
decidra/monitor/analysis/: ai_analysis_manager.py  analysis_data_manager.py  chart_manager.py
decidra/monitor/main/: __init__.py  data.py  event_handler.py
decidra/monitor/manager/: lifecycle.py  tab_state.py  ui.py  user.py
decidra/monitor/widgets/: __init__.py  ai_display_widget.py  auto_dialog.py  kline_chart.py  line_panel.py  order_dialog.py  spinner.py  splash_screen.py
decidra/strategies/: __init__.py  ema.py  kdj.py  macd.py  rsi.py
decidra/tests/: test_modify_order_integration.py  test_trailing_stop_orders.py
decidra/utils/: __init__.py  config_manager.py  global_vars.py  init_dirs.py  logger.py
scripts/: post_install.py
src/: __init__.py  cli.py  dev.sh  monitor_app.py  monitor_app_backup.py  run_tests.py  test_simple_close.py
src/.claude/: settings.local.json
src/api/: __init__.py  futu.py  futu_client.py  futu_factory.py  futu_quote.py  futu_trade.py
src/base/: __init__.py  ai.py  futu_class.py  futu_modue.py  monitor.py  order.py
src/docs/: BUGFIX-DataFrame-handling.md
src/filters/: __init__.py  ma_simple.py  price_threshold.py  triple_cross.py  volume_threshold.py
src/modules/: __init__.py  futu_market.py  futu_trade.py  jsonlite_data.py  supabase.py  yahoo_data.py  yahoo_stock.py
src/modules/ai/: claude_ai_client.py
src/monitor/: __init__.py  app_core.py  indicators.py  monitor_layout.py  ui.py
src/monitor/_deprecated/: monitor_app_backup.py
src/monitor/analysis/: __init__.py  ai_analysis_manager.py  analysis_data_manager.py  analysis_event_handler.py  chart_manager.py
src/monitor/backup/: data_flow.py  performance.py
src/monitor/main/: __init__.py  app_core.py  app_handler.py  data.py  data_manager.py  event_handler.py  group_manager.py  lifecycle_manager.py  ui_manager.py
src/monitor/manager/: __init__.py  _stream.py  data_cache.py  group.py  lifecycle.py  tab_state.py  ui.py  user.py
src/monitor/widgets/: ai_display_widget.py  ai_quick_dialog.py  auto_dialog.py  dialog.py  help.py  highlighter.py  kline_chart.py  line_panel.py  order_dialog.py  progress.py  splash_screen.py  tab.py  thinking_animation.py  topbar.py  window_dialog.py
src/strategies/: __init__.py  ema.py  kdj.py  macd.py  rsi.py
src/tests/: run_monitor_tests.py  test_candlestick_chart.py  test_config.py  test_config_example.json  test_config_manager.py  test_data_engine.py  test_data_flow.py  test_futu_api.py  test_futu_integration.py  test_futu_lowfreq_data.py  test_futu_market.py  test_futu_quote_integration.py  test_futu_quote_manager.py  test_futu_subscription.py  test_futu_trade.py  test_handle_response.py  test_monitor_app_groups.py  test_monitor_app_keyboard.py  test_monitor_app_keyboard_fixed.py  test_monitor_indicators.py  test_monitor_integration.py  test_monitor_performance.py  test_strategy.py
src/utils/: __init__.py  config_manager.py  global_vars.py  logger.py
